--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,19 @@
 version: '2'
 services:
   influxdb:
-    image: influxdb:latest
+    image: influxdb:1.8.6
     ports:
       - '8086:8086'
     volumes:
       - influxdb-storage:/var/lib/influxdb
+      - influxdb-config:/etc/influxdb2
     environment:
       - INFLUXDB_DB=db0
       - INFLUXDB_ADMIN_USER=${INFLUXDB_USERNAME}
       - INFLUXDB_ADMIN_PASSWORD=${INFLUXDB_PASSWORD}
+
   chronograf:
-    image: chronograf:latest
+    image: chronograf:1.8.8
     ports:
       - '127.0.0.1:8888:8888'
     volumes:
@@ -25,7 +27,7 @@ services:
   grafana:
     image: grafana/grafana:latest
     ports:
-      - '3000:3000'
+      - '3001:3000'
     volumes:
       - grafana-storage:/var/lib/grafana
       - ./grafana-provisioning/:/etc/grafana/provisioning
@@ -34,7 +36,20 @@ services:
     environment:
       - GF_SECURITY_ADMIN_USER=${GRAFANA_USERNAME}
       - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD}
+
+  snmpcollector:
+    image: tonimoreno/snmpcollector
+    ports:
+      - '8090:8090'
+    volumes:
+      - grafana-storage:/var/lib/grafana
+      - ./grafana-provisioning/:/etc/grafana/provisioning
+
+
+
 volumes:
   influxdb-storage:
+  influxdb-config:
   chronograf-storage:
   grafana-storage:
+  snmpcollerctor-storage: 
